# context-bridge

./: .gitignore  ARCHIVED.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
AIMemory/: INDEX.md  PROJECT_OVERVIEW.md
AIMemory/knowledge/: canonical-workflow.md  thin-bridge-limits.md  ua-primary-source.md
config/: graph-source.yaml  mcp.json  sync-rules.yaml
context_bridge/: cli.py  doctor.py  mcp_server.py  suggest.py
context_bridge/core/: __init__.py  installer.py  paths.py  subprocess_runner.py
context_bridge/engram/: __init__.py  cli_client.py  client.py  config.py  dedup.py  errors.py  http_client.py  payloads.py  probe.py
context_bridge/enrich/: __init__.py  format_json.py  (+4 more)
docs/: ARCHITECTURE.md  DESENVOLVIMENTO.md  MCP-SETUP.md  PLANO-SPRINTS.md  SOURCES.md
scripts/: install.ps1  smoke.ps1
skill/: SKILL.md
tests/: conftest.py  fakes.py  test_cli.py  test_doctor.py  test_engram_cli.py  test_engram_client.py  test_engram_http.py  test_engram_payloads.py  test_enrich_pipeline.py  test_enrich_where.py  test_graph_diff.py  test_graph_loader.py  test_graph_queries.py  test_graph_validate.py  test_hooks_post_sync.py  test_installer.py  test_integration_e2e.py  test_integration_network.py  test_lat_md_annotations.py  test_lat_md_builder.py  test_lat_md_code_refs.py  test_lat_md_integration.py  test_lat_md_source.py  test_lat_md_wiki_links.py  test_mcp_server.py  test_suggest.py  test_sync_e2e.py  test_sync_engine.py  test_sync_incremental.py  test_sync_report.py
workflows/: enrich-before-task.md  sync-after-understand.md
(+52 files in other folders)
